--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
     margin: 0;
     padding: 0;
     margin-top: -20px;
+    background-color: #f9faf8;
   }
 
 
@@ -87,16 +88,42 @@ h1 {
 
 .random {
     background-color: #f9faf8;
+    padding-bottom: 50px;
 }
 
 .information {
     color: #1f2937;
     font-size: 36px;
     font-weight: bolder;
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
 }
+
+
+
+
+.foods {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    flex-wrap: wrap;
+}
+
+
+
+.meal{
+    height: 250px;
+    width: 250px;
+}
+
 
 .text {
     color: #828a93;
+    font-weight: bold;
+    max-width: 150px;
+    text-align: center;
+    margin-left: 50px;
 }
 
 
