--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,12 @@ h1 {
 
 .quote-section {
     background-color: #e5e7eb;
+    padding: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .quote{
@@ -137,12 +143,20 @@ h1 {
     font-size: 36px;
     font-style: italic;
     font-weight: light;
+    max-width: 850px;
 }
 
-
+.thor {
+    margin-left: 570px;
+    font-weight: bolder;
+}
 
 footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #1f2937;
     color: #f9faf8;
+    padding: 40px;
     
 }
